change links to https

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 		<script src="assets/js/smoothscroll.js"></script>
 		<script src="assets/js/wow.min.js"></script>
 		<!-- Google Maps -->
-		<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4XA1jEQG5PdpAd7X1r98ZlaCqO_cVmhE?sensor=true"></script>
 		<script src="assets/js/gmaps.js"></script>
 		<!-- Custom scripts -->
 		<script src="assets/js/custom.js"></script>
