--- a/index.html
+++ b/index.html
@@ -334,27 +334,6 @@
 
 		<!-- About end -->
 
-		<!-- Twitter start -->
-
-		<section id="twitter" class="module module-gray">
-			<div class="container">
-				<div class="row">
-
-					<div class="col-sm-6 col-sm-offset-3">
-
-						<div class="module-header wow fadeInUp">
-							<div class="module-icon"><span class="icon-social-twitter"></span></div>
-						</div>
-
-						<div class="testimonials owl-carousel wow fadeInUp"></div>
-
-					</div>
-
-				</div><!-- .row -->
-			</div><!-- .container -->
-		</section>
-
-		<!-- Twitter end -->
 
 		<!-- Google Map start-->
 
@@ -471,7 +450,7 @@
 		<script src="assets/js/smoothscroll.js"></script>
 		<script src="assets/js/wow.min.js"></script>
 		<!-- Google Maps -->
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4XA1jEQG5PdpAd7X1r98ZlaCqO_cVmhE?sensor=true"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4XA1jEQG5PdpAd7X1r98ZlaCqO_cVmhE"></script>
 		<script src="assets/js/gmaps.js"></script>
 		<!-- Custom scripts -->
 		<script src="assets/js/custom.js"></script>
