change style alignment etc

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 					<div class="col-sm-6 col-sm-offset-3">
 
 						<div class="module-header wow fadeInUp">
-							<h2 class="module-title">My works</h2>
+							<h2 class="module-title">About me</h2>
 							<div class="module-line"></div>
-							<div class="module-subtitle">
+							<div class="module-subtitle text-left">
 								<p>
 									Mijn naam is Paulien van Diepen, 21 jaar en recentelijk afgestudeerd aan de opleiding Media, Informatie en Communicatie. De woorden die mij als persoon het best omschrijven zijn: energiek, nauwkeurig, doorzetter, eerlijk en nieuwsgierig.
 								</p>
